Java Solaris Communities Sun Store Join SDN My Profile Why Join?
 
Bug Database
Bug Detail
Quick Lists
Top 25 Bugs
Top 25 RFE's
Recently Closed Bugs
Printable Page Printable Page


Bug Database
Bug ID: 6802499
Votes 0
Synopsis EA: assert(false,"unknown node on this path")
Category hotspot:compiler2
Reported Against
Release Fixed hs15(b03), 7(b51) (Bug ID:2174460)
State 10-Fix Delivered, bug
Priority: 4-Low
Related Bugs
Submit Date 06-FEB-2009
Description
The next test failing with escape analysis on several platforms

nsk/stress/jck60/jck60021

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P2/B/192726.kvn/source/src/share/vm/opto/macro.cpp:333), pid=11763, tid=7
#  Error: assert(false,"unknown node on this path")
#
# JRE version: 7.0-b43
# Java VM: OpenJDK Server VM (15.0-b01-2009-01-16-192726.kvn.6790209-fastdebug compiled mode, sharing solaris-x86 )
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x080ff400):  JavaThread "CompilerThread0" daemon [_thread_in_native, id=7, stack(0xc8a8b000,0xc8acb000)]

Stack: [0xc8a8b000,0xc8acb000],  sp=0xc8ac7f20,  free space=243k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x15d0822];;  __1cHVMErrorGreport6MpnMoutputStream__v_+0x5be
V  [libjvm.so+0x15d1815];;  __1cHVMErrorOreport_and_die6M_v_+0x59d
V  [libjvm.so+0x765f2d];;  __1cYreport_assertion_failure6Fpkci1_v_+0x61
V  [libjvm.so+0x108f890];;  __1cQPhaseMacroExpandSvalue_from_mem_phi6MpnENode_nJBasicType_pknEType_pknKTypeOopPtr_2pnKNode_Stack_i_2_+0x1604
V  [libjvm.so+0x108ff9b];;  __1cQPhaseMacroExpandOvalue_from_mem6MpnENode_nJBasicType_pknEType_pknKTypeOopPtr_2_2_+0x447
V  [libjvm.so+0x10916bd];;  __1cQPhaseMacroExpandSscalar_replacement6MpnMAllocateNode_rnNGrowableArray4CpnNSafePointNode____b_+0xa05
V  [libjvm.so+0x10938ed];;  __1cQPhaseMacroExpandXeliminate_allocate_node6MpnMAllocateNode__b_+0xf1
V  [libjvm.so+0x10aabd6];;  __1cQPhaseMacroExpandSexpand_macro_nodes6M_b_+0x2e6
V  [libjvm.so+0x68f3a9];;  __1cHCompileIOptimize6M_v_+0xea1
V  [libjvm.so+0x68929a];;  __1cHCompile2t6MpnFciEnv_pnKC2Compiler_pnIciMethod_ibb_v_+0x145e
V  [libjvm.so+0x4fb2fb];;  __1cKC2CompilerOcompile_method6MpnFciEnv_pnIciMethod_i_v_+0xc3
V  [libjvm.so+0x69fdff];;  __1cNCompileBrokerZinvoke_compiler_on_method6FpnLCompileTask__v_+0x114f
V  [libjvm.so+0x69e205];;  __1cNCompileBrokerUcompiler_thread_loop6F_v_+0xc8d
V  [libjvm.so+0x14e9d6d];;  __1cVcompiler_thread_entry6FpnKJavaThread_pnGThread__v_+0x2d
V  [libjvm.so+0x14e039f];;  __1cKJavaThreadRthread_main_inner6M_v_+0x18f
V  [libjvm.so+0x14e0099];;  __1cKJavaThreadDrun6M_v_+0x37d
V  [libjvm.so+0x11e6033];;  java_start+0x117
C  [libc.so.1+0xa59b9];;  _thr_setup+0x4e
C  [libc.so.1+0xa5ca0];;  _lwp_start+0x0


Current CompileTask:
C2:8319  !b  javasoft.sqe.tests.api.java.util.concurrent.ThreadPoolExecutorTest.testConstructor2()V (34 bytes)

VM Arguments:
jvm_args: -Xcomp -XX:-PrintVMOptions -XX:CompileThreshold=100 -XX:+DoEscapeAnalysis -Xverify:all 
java_command: nsk.stress.share.StressTestRunner -testList /export/local/common/testbase/6/vm/vm/src/nsk/stress/jck60//jck60021/tests -stress:indulgent
Launcher Type: SUN_STANDARD

Environment Variables:
CLASSPATH=/export/local/11134.JDK7.NIGHTLY.VM+solaris-i586_server_comp_nsk.stress.testlist/results/ResultDir/jck60021:/net/sqenfs-1.sfbay/export1/comp/vm/testbase/jck/6b/dist/JCK-runtime-6b/classes:/export/local/common/testbase/6/vm/vm/bin/classes:/export/local/common/jdk/baseline/solaris-i586/lib/tools.jar
PATH=/export/local/common/jdk/baseline/solaris-i586/bin:/bin:/usr/bin
LD_LIBRARY_PATH=/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/server:/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386:/export/local/common/jdk/baseline/solaris-i586/jre/../lib/i386:/net/sqenfs-1.sfbay/export1/comp/vm/testbase/jck/6b/jckjni/solaris-i586/32bit/:/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/server
Posted Date : 2009-02-06 18:55:12.0
Work Around
N/A
Evaluation
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/49a36a80b0c7
Posted Date : 2009-02-20 05:24:35.0
Comments
  
  Include a link with my name & email   


PLEASE NOTE: JDK6 is formerly known as Project Mustang