6802499: EA: assert(false,"unknown node on this path")

Add missing checks for SCMemProj node in Escape analysis code.

Reviewed-by: never